[package]
name = "tests-common"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
enable-tests-common = []

[dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
hex-literal = "0.3.4"

[dependencies.dharitri-sc]
version = "=0.13.6"
features = ["dct-token-payment-legacy-decode"]

[dependencies.dharitri-sc-modules]
version = "=0.13.6"

[dependencies.dharitri-sc-scenario]
version = "=0.13.6"

[dependencies.farm]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.farm-with-locked-rewards]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.farm-staking]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.farm-staking-proxy]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.pair]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.energy-factory]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.common_structs]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.mergeable]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.utils]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.energy-query]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.legacy_token_decode_module]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.lkmex-transfer]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.simple-lock]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.farm-boosted-yields]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.config]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.locking_module]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.farm_token]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.pausable]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"

[dependencies.sc_whitelist_module]
git = "https://github.com/Dharitri-org/drt-exchange-sc"
rev = "b66c644"
